--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -101,3 +101,14 @@ input[type="password"] {
   margin-top: 33px;
   margin-left: 81px;
 }
+input.error {
+  border-color: red;
+  width: 100%;
+}
+
+.input-feedback {
+  color: rgb(235, 54, 54);
+  margin-top: -15px;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
