--- a/api-backend/client/src/components/login/login.css
+++ b/api-backend/client/src/components/login/login.css
@@ -112,3 +112,12 @@ input.error {
   font-size: 14px;
   margin-bottom: 20px;
 }
+
+.upload{
+  margin-left: -25px;
+  padding: 3px;
+  margin-top: -12px;
+}
+#img-upload{
+  width: 100%;
+}
