--- a/api-backend/client/src/Dashboard/PlayGame.css
+++ b/api-backend/client/src/Dashboard/PlayGame.css
@@ -20,3 +20,18 @@ font-size: 1.5em;
 .card_game:hover{
   transform: scale(1.1);
 }
+
+.blinkk {
+  animation: blink 2s steps(5, start) infinite;
+  -webkit-animation: blink 1s steps(5, start) infinite;
+}
+@keyframes blink {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink {
+  to {
+    visibility: hidden;
+  }
+}
